<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pl.miloszgilga</groupId>
  <artifactId>tv-archives-aggregator</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.7</version>
    <relativePath/>
  </parent>

  <modules>
    <!-- frontend must be first int package execution stages -->
    <module>app-frontend</module>
    <module>app-backend</module>
    <module>app-scrapper</module>
  </modules>

  <properties>
    <!-- dependency versions -->
    <spring-boot.version>3.5.7</spring-boot.version>
    <lombok.version>1.18.34</lombok.version>
    <java-annotations.version>26.0.2</java-annotations.version>
    <mylsqConnector.version>9.2.0</mylsqConnector.version>
    <springDotenv.version>4.0.0</springDotenv.version>
    <dotenv.version>3.2.0</dotenv.version>
    <commonsIo.version>2.20.0</commonsIo.version>
    <jdbi.version>3.47.0</jdbi.version>
    <hikariCp.version>6.2.1</hikariCp.version>
    <jsoup.version>1.17.2</jsoup.version>
    <logback.version>1.5.20</logback.version>
    <rxJava.version>3.1.8</rxJava.version>
    <migLayout.version>11.3</migLayout.version>
    <!-- configuration -->
    <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
    <maven-frontend-plugin.version>1.15.1</maven-frontend-plugin.version>
    <maven-clean-plugin.version>3.4.1</maven-clean-plugin.version>
    <maven-assembly-plugin.version>2.2-beta-5</maven-assembly-plugin.version>
    <frontend-output-dir>target/dist</frontend-output-dir>
    <java.version>17</java.version>
    <node.version>v22.14.0</node.version>
    <yarn.version>v1.22.22</yarn.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>${spring-boot.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains</groupId>
        <artifactId>annotations</artifactId>
        <version>${java-annotations.version}</version>
      </dependency>
      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>${mylsqConnector.version}</version>
      </dependency>
      <dependency>
        <groupId>me.paulschwarz</groupId>
        <artifactId>spring-dotenv</artifactId>
        <version>${springDotenv.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.cdimascio</groupId>
        <artifactId>dotenv-java</artifactId>
        <version>${dotenv.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commonsIo.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jdbi</groupId>
        <artifactId>jdbi3-core</artifactId>
        <version>${jdbi.version}</version>
      </dependency>
      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>${hikariCp.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>${jsoup.version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
      </dependency>
      <dependency>
        <groupId>io.reactivex.rxjava3</groupId>
        <artifactId>rxjava</artifactId>
        <version>${rxJava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.miglayout</groupId>
        <artifactId>miglayout-swing</artifactId>
        <version>${migLayout.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <!-- Clean .bin executable JAR file directory -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven-clean-plugin.version}</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>.bin</directory>
              <followSymlinks>false</followSymlinks>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
